<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:background="@color/white"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/ivBack"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginTop="30dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:contentDescription="@null"
                android:src="@drawable/arrow_back"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvHeader"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:text="@string/contact_us"
                android:textSize="17sp"
                android:textColor="@color/textColor"
                app:layout_constraintBottom_toBottomOf="@id/ivBack"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/ivBack"
                app:layout_constraintTop_toTopOf="@id/ivBack"
                app:layout_constraintVertical_bias=".4" />

            <TextView
                android:id="@+id/offc_address1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:drawablePadding="10dp"
                android:text="@string/OFFC_ADD1"
                android:padding="15dp"
                android:textSize="15sp"
                android:textColor="@color/textColor"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/ivBack"
                app:drawableLeftCompat="@drawable/ic_address" />


            <TextView
                android:id="@+id/offc_address2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:drawablePadding="10dp"
                android:text="@string/OFFC_ADD2"
                android:padding="15dp"
                android:textSize="15sp"
                android:textColor="@color/textColor"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/offc_address"
                app:drawableLeftCompat="@drawable/ic_address" />


            <TextView
                android:id="@+id/offc_address"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:drawablePadding="10dp"
                android:padding="15dp"
                android:text="@string/OFFC_ADD3"
                android:textColor="@color/textColor"
                android:textSize="15sp"
                app:drawableLeftCompat="@drawable/ic_address"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/offc_address1" />

            <TextView
                android:id="@+id/offc_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:drawablePadding="10dp"
                android:drawableLeft="@drawable/ic_email"
                android:text="help@amfixo.com"
                android:importantForAutofill="no"
                android:inputType="text"
                android:padding="15dp"
                android:textSize="15sp"
                android:textColor="@color/textColor"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/offc_address2" />

            <TextView
                android:id="@+id/offc_contact"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:drawableLeft="@drawable/ic_phn"
                android:drawablePadding="10dp"
                android:text="+918797871623 or +918797871624"
                android:importantForAutofill="no"
                android:inputType="text"
                android:padding="15dp"
                android:textSize="15sp"
                android:textColor="@color/textColor"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/offc_email" />

            <View
                android:id="@+id/view1"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginTop="10dp"
                android:background="@color/darkGrey"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/offc_contact"


                />


            <TextView
                android:id="@+id/write_us"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:text="Write us"
                android:gravity="center"
                android:importantForAutofill="no"
                android:textSize="17sp"
                android:textColor="@color/textColor"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/offc_contact" />





            <EditText
                android:id="@+id/etName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:hint="@string/name"
                android:importantForAutofill="no"
                android:inputType="text"
                android:padding="15dp"
                android:textSize="15sp"
                android:textColor="@color/textColor"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/write_us" />

            <EditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:autofillHints="@null"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:padding="15dp"
                android:textSize="15sp"
                android:textColor="@color/textColor"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/etName" />

            <EditText
                android:id="@+id/etContact"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:autofillHints="@null"

                android:hint="@string/contact_number"
                android:inputType="phone"
                android:maxLength="10"
                android:padding="15dp"
                android:textSize="15sp"
                android:textColor="@color/textColor"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/etEmail" />

            <EditText
                android:id="@+id/etQuery"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:autofillHints="@null"
                android:gravity="start"
                android:hint="@string/your_query"
                android:inputType="text"
                android:minHeight="100dp"
                android:padding="15dp"
                android:textSize="15sp"
                android:textColor="@color/textColor"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/etContact" />

            <TextView
                android:id="@+id/tvRegister"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:layout_marginTop="32dp"
                android:background="@drawable/app_gradient_background"
                android:padding="15dp"
                android:text="@string/submit"
                android:textAlignment="center"
                android:textColor="@android:color/white"
                android:textSize="17sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/etQuery"
                app:layout_constraintVertical_bias="1" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>
</layout>